force-app/main/default/objects/Demo_Evaluation__c/Demo_Evaluation__c.object-meta.xml
<CustomObject>
    <description>Demo evaluation includes additional
data points on satisfaction as well as a reference for registering the contact&apos;s details</description>
    <label>Demo Evaluation</label>
    <nameField>
        <displayFormat>DemoEval-{000000}</displayFormat>
        <label>Evaluation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>