force-app/main/default/objects/Demo_Evaluation__c/fields/Account_Name1__c.field-meta.xml
<CustomField>
    <fullName>Account_Name1__c</fullName>
    <formula>Demo_Request__r.Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>