force-app/main/default/objects/Demo_Evaluation__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demo Evaluations</relationshipLabel>
    <relationshipName>Demo_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>