force-app/main/default/objects/Demo_Evaluation__c/fields/Back_Legs_90_90_105__c.field-meta.xml
<CustomField>
    <fullName>Back_Legs_90_90_105__c</fullName>
    <label>-Back / Legs (±90° / 90°-105°)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>