force-app/main/default/objects/Demo_Evaluation__c/fields/Cleaning_process__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_process__c</fullName>
    <label>Cleaning Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>