force-app/main/default/objects/Demo_Evaluation__c/fields/Competitor_Product1__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Product</label>
    <referenceTo>Competitor_Product__c</referenceTo>
    <relationshipLabel>Demo Evaluations</relationshipLabel>
    <relationshipName>Demo_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>