force-app/main/default/objects/Demo_Evaluation__c/fields/Competitor_Products__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Products</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>INT Competitor Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Demo Evaluations (Competitor Products)</relationshipLabel>
    <relationshipName>Demo_Evaluations1</relationshipName>
    <type>Lookup</type>
</CustomField>