force-app/main/default/objects/Demo_Evaluation__c/fields/Contact_Request_Development__c.field-meta.xml
<CustomField>
    <fullName>Contact_Request_Development__c</fullName>
    <inlineHelpText>Do you want to receive feedback from Hillrom about NPD?</inlineHelpText>
    <label>Contact Request Development</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>