force-app/main/default/objects/Demo_Evaluation__c/fields/Current_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>INT Competitors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demo Evaluations (Current Supplier)</relationshipLabel>
    <relationshipName>Demo_Evaluations1</relationshipName>
    <type>Lookup</type>
</CustomField>