force-app/main/default/objects/Demo_Evaluation__c/fields/Demo_Request__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Evaluation_Form__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Evaluation_Form__c</referenceTo>
    <relationshipLabel>Demo Evaluations</relationshipLabel>
    <relationshipName>Demo_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>