force-app/main/default/objects/Demo_Evaluation__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demo Evaluations (End Customer)</relationshipLabel>
    <relationshipName>Demo_Evaluations2</relationshipName>
    <type>Lookup</type>
</CustomField>