force-app/main/default/objects/Demo_Evaluation__c/fields/Evaluation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_End_Date__c</fullName>
    <label>Evaluation End Date</label>
    <type>Date</type>
</CustomField>