force-app/main/default/objects/Demo_Evaluation__c/fields/Evaluation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Start_Date__c</fullName>
    <label>Evaluation Start Date</label>
    <type>Date</type>
</CustomField>