force-app/main/default/objects/Demo_Evaluation__c/fields/Full_imaging_capability__c.field-meta.xml
<CustomField>
    <fullName>Full_imaging_capability__c</fullName>
    <label>Full Imaging Capability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>