force-app/main/default/objects/Demo_Evaluation__c/fields/Longitudinal_Slide_400mm__c.field-meta.xml
<CustomField>
    <fullName>Longitudinal_Slide_400mm__c</fullName>
    <label>-Longitudinal Slide (400mm)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>