force-app/main/default/objects/Demo_Evaluation__c/fields/Main_Lift_598_1148mm__c.field-meta.xml
<CustomField>
    <fullName>Main_Lift_598_1148mm__c</fullName>
    <label>-Main Lift (598-1148mm)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>