force-app/main/default/objects/Demo_Evaluation__c/fields/Maximum_weight_capacity_454kg__c.field-meta.xml
<CustomField>
    <fullName>Maximum_weight_capacity_454kg__c</fullName>
    <label>-Maximum Weight Capacity (454kg)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>