force-app/main/default/objects/Demo_Evaluation__c/fields/Opportunity_Name1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name1__c</fullName>
    <formula>Demo_Request__r.Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>