force-app/main/default/objects/Demo_Evaluation__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Demo Evaluations</relationshipLabel>
    <relationshipName>Demo_Evaluations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>