force-app/main/default/objects/Demo_Evaluation__c/fields/Patient_access__c.field-meta.xml
<CustomField>
    <fullName>Patient_access__c</fullName>
    <label>Patient Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>