force-app/main/default/objects/Demo_Evaluation__c/fields/Preparation_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Configuration__c</fullName>
    <label>Preparation &amp; Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>