force-app/main/default/objects/Demo_Evaluation__c/fields/Products1__c.field-meta.xml
<CustomField>
    <fullName>Products1__c</fullName>
    <formula>Demo_Request__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products</label>
    <type>Text</type>
</CustomField>