force-app/main/default/objects/Demo_Evaluation__c/fields/Products3__c.field-meta.xml
<CustomField>
    <fullName>Products3__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PST 300 CN</fullName>
            </value>
            <value>
                <fullName>PST 300 EU</fullName>
            </value>
            <value>
                <fullName>PST 500</fullName>
            </value>
            <value>
                <fullName>TruSystem 7000</fullName>
            </value>
            <value>
                <fullName>TruSystem 7000dv</fullName>
            </value>
            <value>
                <fullName>TruSystem 7500</fullName>
            </value>
            <value>
                <fullName>TruSystem 7500 hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>