force-app/main/default/objects/Demo_Evaluation__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Demo Evaluations</relationshipLabel>
    <relationshipName>Demo_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>