force-app/main/default/objects/Demo_Evaluation__c/fields/Safe__c.field-meta.xml
<CustomField>
    <fullName>Safe__c</fullName>
    <label>Safe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>