force-app/main/default/objects/Demo_Evaluation__c/fields/Tilt_25__c.field-meta.xml
<CustomField>
    <fullName>Tilt_25__c</fullName>
    <label>-Tilt (±25°)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>