force-app/main/default/objects/Demo_Evaluation__c/fields/Trend_35__c.field-meta.xml
<CustomField>
    <fullName>Trend_35__c</fullName>
    <label>-Trend (±35°)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>