force-app/main/default/objects/Demo_Evaluation__c/fields/Trend_Tilt_ratio_30_25__c.field-meta.xml
<CustomField>
    <fullName>Trend_Tilt_ratio_30_25__c</fullName>
    <label>-Trend/Tilt Ratio (30°/25°)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>