force-app/main/default/objects/Demo_Evaluation__c/fields/Type_of_procedure_performed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_procedure_performed__c</fullName>
    <label>Type of Procedure Performed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General/Digestive</fullName>
            </value>
            <value>
                <fullName>ENT/OPH</fullName>
            </value>
            <value>
                <fullName>Ortho/Traumato</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Bariatric</fullName>
            </value>
            <value>
                <fullName>Uro/Gyn</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>