force-app/main/default/objects/Demo_Evaluation__c/fields/Versatile__c.field-meta.xml
<CustomField>
    <fullName>Versatile__c</fullName>
    <label>Versatile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>