force-app/main/default/objects/Demo_Evaluation__c/fields/Warranty_base__c.field-meta.xml
<CustomField>
    <fullName>Warranty_base__c</fullName>
    <label>Warranty Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>