force-app/main/default/objects/Demo_Evaluation__c/fields/Warranty_Extended__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Extended__c</fullName>
    <label>Warranty Extended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Rating</valueSetName>
    </valueSet>
</CustomField>