force-app/main/default/objects/Demo_Evaluation__c/recordTypes/INT_GSS.recordType-meta.xml
<RecordType>
    <fullName>INT_GSS</fullName>
    <active>true</active>
    <label>INT GSS</label>
</RecordType>